[gd_scene format=4 uid="uid://cvgms3bqrev6r"]

[ext_resource type="Script" uid="uid://cmne7yfef4ro4" path="res://scripts/level_boilerplate.gd" id="1_u8v6l"]
[ext_resource type="Script" uid="uid://dvmkjcuu4vlvu" path="res://scripts/multimaskedtilemap.gd" id="1_vo0hr"]
[ext_resource type="PackedScene" uid="uid://dm6qoe57l87ub" path="res://scenes/prefabs/Player.tscn" id="2_ci7an"]
[ext_resource type="TileSet" uid="uid://0ri8qrel1dpj" path="res://resources/tilesets/testtileset.tres" id="2_hwjxr"]
[ext_resource type="PackedScene" uid="uid://bn46343xobuti" path="res://scenes/prefabs/ExitDoor.tscn" id="3_vo0hr"]
[ext_resource type="Script" uid="uid://cqfbx47wt6d28" path="res://scripts/masked_layer.gd" id="3_xdmmy"]

[node name="testlevel_2" type="Node2D" unique_id=1288485676]
script = ExtResource("1_u8v6l")

[node name="MultiMaskedTileMap" type="Node2D" parent="." unique_id=903806153 node_paths=PackedStringArray("player")]
script = ExtResource("1_vo0hr")
player = NodePath("../PlayerCharacter")
metadata/_custom_type_script = "uid://dvmkjcuu4vlvu"

[node name="MaskedTileMapLayer" type="TileMapLayer" parent="MultiMaskedTileMap" unique_id=716131624]
tile_map_data = PackedByteArray("AAAAAAcAAAAAAAEAAAABAAcAAAAAAAEAAAACAAcAAAAAAAEAAAADAAcAAAAAAAEAAAAEAAcAAAAAAAEAAAAFAAcAAAAAAAEAAAAGAAcAAAAAAAEAAAAHAAcAAAAAAAEAAAAIAAcAAAAAAAEAAAAJAAcAAAAAAAEAAAAKAAcAAAAAAAEAAAALAAcAAAAAAAEAAAAMAAcAAAAAAAEAAAANAAcAAAAAAAEAAAAOAAcAAAAAAAEAAAAPAAcAAAAAAAEAAAAQAAcAAAAAAAEAAAARAAcAAAAAAAEAAAASAAcAAAAAAAEAAAATAAgAAAAAAAEAAAAUAAgAAAAAAAEAAAAVAAgAAAAAAAEAAAAWAAgAAAAAAAEAAAAXAAgAAAAAAAEAAAAYAAgAAAAAAAEAAAAZAAgAAAAAAAEAAAAaAAgAAAAAAAEAAAAbAAgAAAAAAAEAAAAcAAgAAAAAAAEAAAAdAAgAAAAAAAEAAAAeAAgAAAAAAAEAAAAfAAgAAAAAAAEAAAAgAAgAAAAAAAEAAAAhAAgAAAAAAAEAAAAiAAgAAAAAAAEAAAAjAAgAAAAAAAEAAAAkAAgAAAAAAAEAAAAlAAgAAAAAAAEAAAAmAAgAAAAAAAEAAAAnAAgAAAAAAAEAAAAgAAcAAAAAAAEAAAAfAAcAAAAAAAEAAAAeAAcAAAAAAAEAAAAdAAcAAAAAAAEAAAAcAAcAAAAAAAEAAAAbAAcAAAAAAAEAAAAaAAcAAAAAAAEAAAAZAAcAAAAAAAEAAAAYAAcAAAAAAAEAAAAXAAcAAAAAAAEAAAAWAAcAAAAAAAEAAAAVAAcAAAAAAAEAAAAUAAcAAAAAAAEAAAATAAcAAAAAAAEAAAAiAAcAAAAAAAEAAAAjAAcAAAAAAAEAAAAkAAcAAAAAAAEAAAAlAAcAAAAAAAEAAAAmAAcAAAAAAAEAAAAnAAcAAAAAAAEAAAAoAAcAAAAAAAEAAAAhAAcAAAAAAAEAAAA=")
tile_set = ExtResource("2_hwjxr")
script = ExtResource("3_xdmmy")
metadata/_custom_type_script = "uid://cqfbx47wt6d28"

[node name="MaskedTileMapLayer2" type="TileMapLayer" parent="MultiMaskedTileMap" unique_id=2028399343]
tile_map_data = PackedByteArray("AAAAAAsAAAAAAAAAAAABAAsAAAAAAAAAAAACAAsAAAAAAAAAAAADAAsAAAAAAAAAAAAEAAsAAAAAAAAAAAAFAAsAAAAAAAAAAAAGAAsAAAAAAAAAAAAHAAsAAAAAAAAAAAAIAAsAAAAAAAAAAAAJAAsAAAAAAAAAAAAKAAsAAAAAAAAAAAALAAsAAAAAAAAAAAAMAAsAAAAAAAAAAAANAAsAAAAAAAAAAAAOAAsAAAAAAAAAAAAPAAsAAAAAAAAAAAAQAAsAAAAAAAAAAAARAAsAAAAAAAAAAAASAAsAAAAAAAAAAAATAAsAAAAAAAAAAAAUAAsAAAAAAAAAAAAVAAsAAAAAAAAAAAAWAAsAAAAAAAAAAAAXAAsAAAAAAAAAAAAYAAsAAAAAAAAAAAAZAAsAAAAAAAAAAAAaAAsAAAAAAAAAAAAbAAsAAAAAAAAAAAAcAAsAAAAAAAAAAAAdAAsAAAAAAAAAAAAeAAsAAAAAAAAAAAAfAAsAAAAAAAAAAAAgAAsAAAAAAAAAAAAhAAsAAAAAAAAAAAAiAAsAAAAAAAAAAAAjAAsAAAAAAAAAAAAkAAsAAAAAAAAAAAAlAAsAAAAAAAAAAAAmAAsAAAAAAAAAAAAnAAsAAAAAAAAAAAAoAAsAAAAAAAAAAAApAAsAAAAAAAAAAAAqAAsAAAAAAAAAAAArAAsAAAAAAAAAAAA=")
tile_set = ExtResource("2_hwjxr")
script = ExtResource("3_xdmmy")
mask_number = 1
metadata/_custom_type_script = "uid://cqfbx47wt6d28"

[node name="PlayerCharacter" parent="." unique_id=614979792 instance=ExtResource("2_ci7an")]
position = Vector2(30, 13)
scale = Vector2(2.25, 2.25)

[node name="ExitDoor" parent="." unique_id=45997899 instance=ExtResource("3_vo0hr")]
position = Vector2(586, 76)
next_scene = "res://scenes/levels/LevelTutorial.tscn"
